fix: bgr blend-mode not working on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ body {
     box-sizing: border-box;
     background: rgb(107,150,143); /* FALLBACK COLOR */
     background: linear-gradient(174deg, rgba(107,150,143,1) 0%, rgba(138,180,171,1) 50%, rgba(200,235,228,1) 100%); /* FALLBACK GRADIENT */
-    background: linear-gradient(limegreen, transparent), linear-gradient(90deg, skyblue, transparent), linear-gradient(-90deg, coral, transparent);
-    background-blend-mode: screen;
+    background: linear-gradient(#32cd32, transparent), linear-gradient(90deg, #87ceeb, transparent), linear-gradient(-90deg, #ff7f50, transparent);
+    background-blend-mode: screen !important;
 }
 
 .img-wrapper {
